Bug 265821 - Sunlight on the globe desktop does not match the local time
Summary: Sunlight on the globe desktop does not match the local time
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: wallpaper (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Frederik Gladhorn
URL:
Keywords:
: 266532 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-08 17:56 UTC by Jesús Vidal
Modified: 2011-05-26 08:40 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to marble.cpp (930 bytes, text/plain)
2011-05-23 02:33 UTC, Kamil Iskra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jesús Vidal 2011-02-08 17:56:00 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

I'm using desktop globe, and on KDE 4.6 SC the sunlight does not match the local time. I mean, when it's morning on my country it shows night, and when it's night it shows morning.

Reproducible: Always
Comment 1 Jesús Vidal 2011-02-16 23:20:52 UTC
Sorry, this bug can be closed. Changing to show an image, and then again choose Globe, solves the problem (at least, it seems that after doing that it's working)
Comment 2 Jesús Vidal 2011-02-17 10:10:07 UTC
Well, i was wrong, this only works on night. It seems that the globe doesn't take the correct time, it's always getting night time. I mean, it is always getting the hours as night hours. So back again as a bug....sorry.
Comment 3 Dylan 2011-03-05 17:48:01 UTC
Marble Virtual Globe
Version 1.0.0 (Stable Release)
Using KDE Development Platform 4.6.00 (4.6.0) "release 395"

When run as stand-alone application, Marble shows the correct daylight shadow in satellite view. When run as desktop background, the daylight is approx. 3 hours in advance of real time.
Comment 4 Jakub Zakrzewski 2011-05-02 10:07:51 UTC
I have the same problem with the sunlight on my computer.
Comment 5 Erik Zeek 2011-05-05 00:32:09 UTC
I'm seeing this behavior on Fedora 13 and Gentoo.
Comment 6 Erik Zeek 2011-05-05 00:34:09 UTC
(In reply to comment #5)
> I'm seeing this behavior on Fedora 13 and Gentoo.

That should be Fedora 14.
Comment 7 Kamil Iskra 2011-05-23 02:33:12 UTC
Created attachment 60229 [details]
Patch to marble.cpp
Comment 8 Kamil Iskra 2011-05-23 02:34:40 UTC
I got annoyed enough by this bug that I went ahead and fixed it.  A patch against kdeplasma-addons-4.6.2 is attached; could sbd. from the KDE project please merge it?  It fixes the time issue from this bug, and also the fact that "Show placemarks" did not affect "Terrain" marks.  So with this patch, if "Show placemarks" is unchecked, the globe will not have any labels on it.
Comment 9 Sascha Peilicke 2011-05-25 09:02:58 UTC
Just applied it, please re-test and close if it's working.
Comment 10 Sascha Peilicke 2011-05-25 09:03:19 UTC
*** Bug 266532 has been marked as a duplicate of this bug. ***
Comment 11 Kamil Iskra 2011-05-26 05:20:34 UTC
I just tested git HEAD and it works fine.  I can't close it though since I'm not the one who reported it.