Added patch by Kamil Iskra to fix timezone issue and terrain mark hiding.

BUG: 265821